placed margin at the right span in categories

--- a/index.html
+++ b/index.html
@@ -381,16 +381,16 @@
                                     </tr>
                                     <tr>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Наборы «20 в 1»</span>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;display: block; margin:0 0 3px;">Несколько услуг на&nbsp;выбор в&nbsp;одном подарке</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;display: block; margin:0 0 3px;">Наборы «20 в 1»</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Несколько услуг на&nbsp;выбор в&nbsp;одном подарке</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">VIP</span>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;display: block; margin:0 0 3px;">Впечатления для&nbsp;самых притязательных</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;display: block; margin:0 0 3px;">VIP</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Впечатления для&nbsp;самых притязательных</span>
                                         </td>
                                         <td align="center" valign="top" bgcolor="#eef2f4" style="background-color:#eef2f4;">
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;">Полеты</span>
-                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;display: block; margin:0 0 3px;">Воздушные программы</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 15px; line-height: 18px; font-weight: 700; color: #333333;display: block; margin:0 0 3px;">Полеты</span>
+                                            <span style="font-family:Tahoma, Geneva, sans-serif;font-size: 13px; line-height: 15px; display: inline-block; color: #333333;">Воздушные программы</span>
                                         </td>
                                     </tr>
                                 </table>
