--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8">
     <title>Письмо Parklon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
